[package]
name = "winspawn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
windows = "0.13.0"
winspawn-macro = { version = "0.1.0", path = "winspawn-macro" }

[dev-dependencies]
tokio = { version = "1.7", features = ["macros", "rt", "io-util"] }
tokio-anon-pipe = "0.1.1"
pretty_env_logger = "0.4.0"

[build-dependencies]
windows = "0.13.0"

[workspace]
members = [
    "",
    "winspawn-macro",
]
