[package]
name = "winspawn"
version = "0.1.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"
description = "Spawn process for passing Universal CRT's file descriptor on windows."
license = "MIT/Apache-2.0"
repository = "https://github.com/yskszk63/winspawn"
readme = "README.md"
keywords = ["windows", "process", "spawn", "crt"]

[dependencies]
log = "0.4.14"
windows = "0.20.0"
winspawn-macro = { version = "0.1.0", path = "winspawn-macro" }

[dev-dependencies]
tokio = { version = "1.11", features = ["macros", "rt", "io-util"] }
tokio-anon-pipe = "0.1.1"
pretty_env_logger = "0.4.0"

[build-dependencies]
windows = "0.20.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[workspace]
members = [
    "",
    "winspawn-macro",
]
